# python-package-example

./: LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml  pytest-ci.yml
examples/: util.py
tests/: test_util.py
